# BachLedger

./: .gitignore  .gitmodules  NOTICE  README.md
.claude/: settings.local.json
.memo/: .gitignore
.memo/index/: arch.json  interface.json  issues.json  stories.json
aidev/: .gitignore  agent.go  go.mod  go.sum  loop.go  main.go  tools.go
aidev/prompts/: coder.md  critic.md  planner.md  tester.md
chainmaker/: README.md
chainmaker/yzchain-cryptogen/: .gitignore  Makefile  NOTICE  README.md
chainmaker/yzchain-go/: .gitignore  .golangci.yml  Makefile  README.md  cgroup.sh  deploy_multiserver.sh  go.mod  go.sum  loop-transfer.sh  start-dockervm.sh  test-all-dockervm.sh  test-all-evm.sh
contracts/: AccessControl.sol  AuditLog.sol  Counter.sol  MedicalRecord.sol
deployment/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  genesis.json  setup.sh
deployment/keys/: .gitignore
deployment/scripts/: generate-keys.sh
docs/: AI_REPRODUCTION_GUIDE.md  DEPLOYMENT_GUIDE.md
docs/algorithms/: seamless-scheduling.md
docs/api/: README.md
docs/architecture/: core-modules.md
docs/kb/: glossary.md  index.md
docs/reviews/: SUMMARY.md  bach-consensus-review.md  (+13 more)
paper/: conference_101719.tex  refs.bib
rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust/bach-consensus/: Cargo.toml
rust/bach-consensus/src/: lib.rs
rust/bach-consensus/tests/: integration_tests.rs
rust/bach-contracts/: Cargo.toml
rust/bach-contracts/src/: lib.rs
rust/bach-crypto/: Cargo.toml  TEST_COVERAGE.md
rust/bach-crypto/src/: lib.rs
rust/bach-crypto/tests/: keccak_tests.rs  signature_tests.rs
rust/bach-evm/: Cargo.toml
rust/bach-evm/src/: lib.rs
rust/bach-evm/tests/: evm_tests.rs
rust/bach-network/: Cargo.toml
rust/bach-network/src/: codec.rs  error.rs  lib.rs  message.rs  peer.rs  service.rs
rust/bach-network/tests/: integration.rs  network_tests.rs
rust/bach-node/: Cargo.toml
rust/bach-node/src/: lib.rs  main.rs
rust/bach-primitives/: Cargo.toml  TEST_COVERAGE.md
rust/bach-primitives/src/: lib.rs
rust/bach-primitives/tests/: address_tests.rs  h256_tests.rs  u256_tests.rs
rust/bach-rpc/: Cargo.toml
rust/bach-rpc/src/: lib.rs
rust/bach-rpc/tests/: rpc_tests.rs
rust/bach-scheduler/: Cargo.toml  TEST_COVERAGE.md
rust/bach-scheduler/src/: lib.rs
rust/bach-scheduler/tests/: lib.rs  scheduler_tests.rs
rust/bach-state/: Cargo.toml  TEST_COVERAGE.md
rust/bach-state/src/: lib.rs
rust/bach-state/tests/: ownership_tests.rs  statedb_tests.rs
rust/bach-storage/: Cargo.toml
rust/bach-storage/src/: lib.rs
rust/bach-storage/tests/: storage_tests.rs
rust/bach-types/: Cargo.toml  TEST_COVERAGE.md
rust/bach-types/src/: lib.rs
rust/bach-types/tests/: block_tests.rs  priority_tests.rs  rwset_tests.rs  transaction_tests.rs
rust/contracts/: DESIGN.md  REVIEW.md
rust/contracts/bytecode/: README.md
rust/contracts/src/: AssetToken.sol
rust/crates/bach-cli/: Cargo.toml  FORMAL_REVIEW.md  REVIEW_CHECKLIST.md
rust/crates/bach-cli/src/: config.rs  error.rs  main.rs  output.rs
rust/crates/bach-cli/src/commands/: account.rs  keygen.rs  mod.rs  query.rs  tx.rs
rust/crates/bach-cli/tests/: cli_tests.rs
rust/crates/bach-consensus/: Cargo.toml
rust/crates/bach-consensus/src/: error.rs  lib.rs  tbft.rs  types.rs
rust/crates/bach-core/: Cargo.toml
rust/crates/bach-core/src/: error.rs  executor.rs  lib.rs
rust/crates/bach-crypto/: Cargo.toml
rust/crates/bach-crypto/src/: error.rs  hash.rs  lib.rs  signature.rs
rust/crates/bach-e2e/: Cargo.toml  DESIGN.md
rust/crates/bach-e2e/src/: builder.rs  contracts.rs  harness.rs  lib.rs  scenarios.rs
rust/crates/bach-evm/: Cargo.toml
rust/crates/bach-evm-tests/: Cargo.toml
rust/crates/bach-evm-tests/src/: error.rs  lib.rs  runner.rs  state_test.rs  types.rs  vm_test.rs
rust/crates/bach-evm/src/: context.rs  error.rs  gas.rs  interpreter.rs  lib.rs  memory.rs  opcode.rs  stack.rs
rust/crates/bach-metrics/: Cargo.toml
rust/crates/bach-metrics/src/: collector.rs  export.rs  histogram.rs  lib.rs
rust/crates/bach-network/: Cargo.toml
rust/crates/bach-network/src/: error.rs  lib.rs  peer.rs  service.rs  types.rs
rust/crates/bach-node/: Cargo.toml
rust/crates/bach-node/src/: cli.rs  config.rs  consensus_driver.rs  genesis.rs  main.rs  node.rs
rust/crates/bach-primitives/: Cargo.toml
rust/crates/bach-primitives/src/: address.rs  error.rs  hash.rs  lib.rs
rust/crates/bach-rlp/: Cargo.toml
rust/crates/bach-rlp/src/: lib.rs
rust/crates/bach-rpc/: Cargo.toml  DESIGN.md
rust/crates/bach-rpc/src/: error.rs  handler.rs  lib.rs  server.rs  types.rs
rust/crates/bach-rpc/src/methods/: eth.rs  mod.rs  net.rs  web3.rs
rust/crates/bach-scheduler/: Cargo.toml
rust/crates/bach-scheduler/src/: dependency.rs  error.rs  lib.rs  ownership.rs  rw_set.rs  scheduler.rs  state_key.rs
rust/crates/bach-sdk/: Cargo.toml  DESIGN.md  FORMAL_REVIEW.md  REVIEW_CHECKLIST.md  REVIEW_NOTES.md  TEST_PLAN.md
rust/crates/bach-sdk/src/: client.rs  contract.rs  error.rs  lib.rs  transport.rs  tx_builder.rs  types.rs  wallet.rs
rust/crates/bach-sdk/src/abi/: decode.rs  encode.rs  mod.rs  types.rs
rust/crates/bach-sdk/tests/: client_tests.rs  security_tests.rs  signing_tests.rs  ui_tests.rs  wallet_tests.rs
rust/crates/bach-sdk/tests/ui/: wallet_not_clone.rs  wallet_not_copy.rs
rust/crates/bach-storage/: Cargo.toml
rust/crates/bach-storage/src/: block.rs  db.rs  error.rs  lib.rs  state.rs  traits.rs
rust/crates/bach-txpool/: Cargo.toml
rust/crates/bach-txpool/src/: error.rs  lib.rs  pool.rs
rust/crates/bach-types/: Cargo.toml
rust/crates/bach-types/src/: block.rs  codec.rs  lib.rs  receipt.rs  transaction.rs
rust/docs/: DECISIONS.md  GIT-WORKFLOW.md  MEMO.md  PLAN.md  REPORT-001-kickoff.md  REPORT-002-observability.md  REPORT-003-remaining-decisions.md  ai-dev-framework.md  draft
rust/examples/: asset_token_test.rs  manual_test.rs
rust/scripts/: compile_contracts.sh  e2e.sh  run_asset_token_test.sh  run_manual_test.sh  test_multinode.sh
tools/: skill.md
(+942 files in other folders)
