[package]
name = "bach-contracts"
version = "0.1.0"
edition = "2021"
description = "Medical smart contract templates and deployment utilities"

[dependencies]
bach-primitives = { path = "../bach-primitives" }
bach-crypto = { path = "../bach-crypto" }
bach-evm = { path = "../bach-evm" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
