[package]
name = "bach-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for BachLedger: Keccak256, ECDSA signatures"
license = "MIT"

[dependencies]
bach-primitives = { path = "../bach-primitives" }
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
hex = "0.4"
