[package]
name = "bach-network"
version = "0.1.0"
edition = "2021"

[dependencies]
bach-primitives = { path = "../bach-primitives" }
bach-crypto = { path = "../bach-crypto" }
bach-types = { path = "../bach-types" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_with = "3"
bincode = "1.3"

# Logging
tracing = "0.1"

# Utilities
thiserror = "1"
parking_lot = "0.12"
futures = "0.3"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
