[package]
name = "bach-node"
version = "0.1.0"
edition = "2021"

[dependencies]
bach-primitives = { path = "../bach-primitives" }
bach-crypto = { path = "../bach-crypto" }
bach-types = { path = "../bach-types" }
bach-state = { path = "../bach-state" }
bach-scheduler = { path = "../bach-scheduler" }
bach-evm = { path = "../bach-evm" }
bach-consensus = { path = "../bach-consensus" }
bach-network = { path = "../bach-network" }
bach-storage = { path = "../bach-storage" }
bach-rpc = { path = "../bach-rpc" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encoding
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
