[package]
name = "bach-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
bach-primitives = { path = "../bach-primitives" }
bach-types = { path = "../bach-types" }
bach-crypto = { path = "../bach-crypto" }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
