[package]
name = "bach-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for BachLedger blockchain"

[[bin]]
name = "bach"
path = "src/main.rs"

[dependencies]
bach-sdk = { path = "../bach-sdk" }
bach-primitives = { path = "../bach-primitives" }
bach-crypto = { path = "../bach-crypto" }

tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
dirs = "5"
toml = "0.8"

# Cryptographic dependencies for keystore
k256 = { workspace = true }
aes = "0.8"
ctr = "0.9"
scrypt = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
