[package]
name = "bach-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TBFT consensus for BachLedger"

[dependencies]
bach-primitives = { workspace = true, features = ["serde"] }
bach-types.workspace = true
bach-crypto.workspace = true
bach-metrics.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true

[dev-dependencies]
bytes.workspace = true
