[package]
name = "bach-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core orchestration for BachLedger"

[dependencies]
bach-primitives.workspace = true
bach-types.workspace = true
bach-crypto.workspace = true
bach-storage.workspace = true
bach-evm.workspace = true
bach-scheduler.workspace = true
bach-txpool.workspace = true
bach-metrics.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
bytes.workspace = true
