[package]
name = "bach-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cryptographic primitives for BachLedger"

[dependencies]
bach-primitives.workspace = true
k256.workspace = true
sha3.workspace = true
sha2.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
rand.workspace = true
