[package]
name = "bach-e2e"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "End-to-end integration tests for BachLedger"

[dependencies]
bach-primitives.workspace = true
bach-types.workspace = true
bach-crypto.workspace = true
bach-storage.workspace = true
bach-evm.workspace = true
bach-scheduler.workspace = true
bach-txpool.workspace = true
bach-core.workspace = true

thiserror.workspace = true
tracing.workspace = true
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand.workspace = true
k256.workspace = true
bytes.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
