[package]
name = "bach-evm-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ethereum test suite integration for BachLedger EVM"

[dependencies]
bach-primitives.workspace = true
bach-crypto.workspace = true
bach-evm.workspace = true
bach-storage.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
tracing.workspace = true

[dev-dependencies]
# Tests are run via `cargo test`
