[package]
name = "bach-evm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EVM execution engine for BachLedger"

[dependencies]
bach-primitives.workspace = true
bach-crypto.workspace = true
bach-storage.workspace = true
bach-metrics.workspace = true
primitive-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
