[package]
name = "bach-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Observability and metrics for BachLedger"

[dependencies]
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
