[package]
name = "bach-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "P2P networking for BachLedger"

[dependencies]
bach-primitives = { workspace = true, features = ["serde"] }
bach-types.workspace = true
bach-metrics.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt", "macros", "time"] }
bytes.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
parking_lot.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
