[package]
name = "bach-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BachLedger node binary"

[[bin]]
name = "bachledger"
path = "src/main.rs"

[dependencies]
bach-core.workspace = true
bach-metrics.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
