[package]
name = "bach-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BachLedger node binary"

[[bin]]
name = "bachledger"
path = "src/main.rs"

[dependencies]
bach-primitives = { workspace = true, features = ["serde"] }
bach-types.workspace = true
bach-crypto.workspace = true
bach-storage.workspace = true
bach-txpool.workspace = true
bach-core.workspace = true
bach-metrics.workspace = true
bach-rpc.workspace = true
bach-network.workspace = true
bach-consensus.workspace = true
k256 = { workspace = true }
parking_lot.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
bytes.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
