[package]
name = "bach-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC 2.0 server for BachLedger"

[dependencies]
# Internal crates
bach-primitives = { workspace = true }
bach-crypto = { workspace = true }
bach-types = { workspace = true }
bach-rlp = { workspace = true }
bach-evm = { workspace = true }
bach-storage = { workspace = true }
bach-txpool = { workspace = true }
bach-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# JSON-RPC
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
