[package]
name = "bach-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Seamless Scheduling algorithm for BachLedger"

[dependencies]
bach-primitives.workspace = true
bach-types.workspace = true
bach-evm.workspace = true
bach-metrics.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
