[package]
name = "bach-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for BachLedger blockchain"

[dependencies]
bach-primitives = { path = "../bach-primitives" }
bach-crypto = { path = "../bach-crypto" }
bach-types = { path = "../bach-types" }

tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
hex = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
k256 = { workspace = true }
zeroize = "1.7"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = ["http"]
http = ["reqwest"]
