[package]
name = "bach-txpool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transaction pool for BachLedger"

[dependencies]
bach-primitives.workspace = true
bach-types.workspace = true
bach-crypto.workspace = true
bach-metrics.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
rand.workspace = true
k256.workspace = true
bytes.workspace = true
